---
source: crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#price\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.price\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    2 -> 3 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#price" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.price" ]
    0 -> 1 [ label = "QueryPartition" ]
    2 -> 3 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
